fix: scroll reveal overflow layout

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 .main--container {
     transition:all 0.4s ease-in;
+    overflow-x:hidden;
 }
 
 .dark .main--container {
